# chip-sandbox-bench

./: .env.example  .gitignore  .gitmodules  README.md
data/: README.md  chip_catalog_sample100.jsonl  chip_catalog_sample100.manifest.json  chip_design_50.jsonl  chip_design_50.manifest.json  chip_design_smoke10.jsonl  chip_design_smoke10.manifest.json  resource_policy_before_cpu1_20260624.json  swesmith_env_manifests.json  swesmith_env_overrides.json  terminalbench_2026_03_05_smoke16.jsonl  terminalbench_2026_03_05_smoke16.parquet
docs/: solver-traces.md
py/: README.md  pyproject.toml
py/code_sandbox_bench/: __init__.py  adaptive_concurrency.py  agent_trace.py  ai_gateway_solver.py  bench.py  canary_validate.py  cost_canary_loop.py  cost_goal_audit.py  cost_model.py  dataset.py  matrix.py  policy_compare.py  providers.py  resource_policy.py  resource_report.py  solver_trace.py  task_env.py
py/tests/: test_solver_trace.py
reports/: aws-microvm-cost-reduction-sample.md  aws-microvm-workdir-lessons.md  cost-estimate-caveats.md  cost-reduction-loop-20260624.md  cross-vendor-comparison.md  dynamic-limits-and-optimization-strategy.md  failure-modes-tradeoffs.md  generated-canary-validation-cpu1-canary-20260624.json  generated-canary-validation-modal-cpu1-canary-20260624.json  generated-cost-canary-loop-cpu1-canary-20260624.json  generated-cost-canary-loop-dry-run-20260624.md  generated-cost-canary-loop-preflight-20260624.json  generated-cost-goal-audit-failed-cpu1-canary-20260624.md  generated-cost-goal-audit-failed-modal-canary-20260624.md  generated-cost-goal-audit-missing-canary-20260624.md  generated-local-resource-observations-20260624.json  generated-local-resource-observations-20260624.md  generated-policy-cost-comparison-20260624.json  generated-policy-cost-comparison-20260624.md  generated-policy-cost-comparison-cpu1-canary-20260624.json  generated-policy-cost-comparison-modal-cpu1-canary-20260624.json  per-provider-report.md  (+7 more)
(+290 files in other folders)
