[project]
name = "code-sandbox-bench"
version = "0.1.0"
description = "TerminalBench smoke benchmark runner for coding sandbox providers"
requires-python = ">=3.11"
dependencies = [
  "pyarrow>=16",
  "python-dotenv>=1",
  "pydantic>=2",
]

[project.optional-dependencies]
providers = [
  "modal==1.3.2",
  "daytona-sdk==0.155.0",
]

[tool.ruff]
line-length = 120

