[project]
name = "code-sandbox-bench"
version = "0.1.0"
description = "TerminalBench smoke benchmark runner for coding sandbox providers"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
env = [
  "python-dotenv>=1",
]
parquet = [
  "pyarrow>=16",
]
providers = [
  "modal==1.3.2",
  "daytona-sdk==0.155.0",
]
all = [
  "python-dotenv>=1",
  "pyarrow>=16",
  "modal==1.3.2",
  "daytona-sdk==0.155.0",
]

[project.scripts]
code-sandbox-bench = "code_sandbox_bench.bench:main"
code-sandbox-resource-report = "code_sandbox_bench.resource_report:main"
code-sandbox-policy-compare = "code_sandbox_bench.policy_compare:main"
code-sandbox-canary-validate = "code_sandbox_bench.canary_validate:main"
code-sandbox-cost-goal-audit = "code_sandbox_bench.cost_goal_audit:main"
code-sandbox-cost-canary-loop = "code_sandbox_bench.cost_canary_loop:main"

[tool.ruff]
line-length = 120
